--- a/Protótipo Atlas/sourceAtlasPrototype/index.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/index.html
@@ -63,10 +63,7 @@
 
 	<div class="canvas" id="canvas" style="margin-left: 200px; margin-top: 120px;">
 
-		<form action="javascript:loadJson()">
-			<input type="file" name="pic" accept=".json" id="jsonLoad">
-			<input type="submit">
-		</form>
+		
 		<p id="demo"></p>
 		<div id="myDiagramDiv" style="border: solid 1px black; width:100%; height:600px;"></div>
 
@@ -78,69 +75,22 @@
 				<button id="SaveButton" onclick="save()">Save</button>
 				<button onclick="load()">Load</button> Diagram.model saved in JSON format:<br />
 			</div>
-			<textarea id="mySavedModel" style="width:100%;height:400px;">
-
-
-
-		</textarea>
+			<textarea id="mySavedModel" style="width:100%;height:400px;"></textarea>
+			<textarea id="myModel" style="width:100%;height:400px;"></textarea>
 		</div>
 	</div>
 	<script type="text/javascript">
+	
+	 var m1;
 		function firstLoad() {
-			var f1 = new Feature("a", "mandatory");
-			var f3 = new Feature("c", "optional");
-			var f2 = new Feature("b", "mandatory");
-			var f4 = new Feature("d", "alternative");
-			var f5 = new Feature("e", "optional");
-			var f6 = new Feature("f", "alternative");
-			var f7 = new Feature("g", "optional");
-			var f8 = new Feature("g5", "mandatory");
-			var f9 = new Feature("g12", "alternative");
-			var a1 = new Association(f1, f2);
-			var a2 = new Association(f1, f3);
-			var a3 = new Association(f2, f4);
-			var a4 = new Association(f2, f5);
-			var a5 = new Association(f2, f6);
-			var a6 = new Association(f2, f7);
-			var a7 = new Association(f2, f8);
-			var a8 = new Association(f2, f9);
-			var m1 = new Model("m1");
-			m1.addFeature(f1);
-			m1.addFeature(f2);
-			m1.addFeature(f3);
-			m1.addFeature(f4);
-			m1.addFeature(f5);
-			m1.addFeature(f6);
-			m1.addFeature(f7);
-			m1.addFeature(f8);
-			m1.addFeature(f9);
-			m1.addAssociation(a1);
-			m1.addAssociation(a2);
-			m1.addAssociation(a3);
-			m1.addAssociation(a4);
-			m1.addAssociation(a5);
-			m1.addAssociation(a6);
-			m1.addAssociation(a7);
-			m1.addAssociation(a8);
-
-			document.getElementById('mySavedModel').innerHTML = parseModelToString(m1);
+			m1 = new Model();
+			init(m1);
 
 			initGo();
-
+			m1 = parseToModel(document.getElementById("mySavedModel").value);
+			document.getElementById('myModel').value = JSON.stringify(m1);
 
 		}
-
-		function updateModel() {
-
-			document.getElementById('mySavedModel').innerHTML = parseModelToString(m1);
-
-			initGo();
-		}
-
-		String.prototype.isEmpty = function () {
-			return (this.length === 0 || !this.trim());
-		};
-
 		function toggle_visibility(id) {
 			var e = document.getElementById(id);
 			if (e.style.display == 'block')
@@ -149,41 +99,7 @@
 				e.style.display = 'block';
 		}
 
-		function saveAsJson() {
-
-			var modelName = document.getElementById('modelName').value;
-
-			if (modelName.isEmpty()) {
-				alert("Insert the model name!");
-			} else {
-				var goJson = document.getElementById('mySavedModel').value;
-				downloadContent(modelName, goJson);
-			}
-		}
-
-		function loadJson() {
-
-			var goJson = document.getElementById('jsonLoad').value;
-			alert(jsonLoad);
-
-			var model = parseToModel(goJson);
-
-			var newJson = parseModelToString(model);
-
-			document.getElementById('demo').innerHTML = newJson;
-		}
-
-		function exportPng() {
-
-			var modelName = document.getElementById('modelName').value;
-
-			if (modelName.isEmpty()) {
-				alert("Insert the model name!");
-			} else {
-				var img = makeBlob();
-				downloadImg(modelName, img);
-			}
-		}
+		
 	</script>
 
 	<!--Load Scripts-->
@@ -201,6 +117,8 @@
 	<script type="text/javascript" src="./js/CreateModals.js"></script>
 	<script type="text/javascript" src="./js/CreateFeatureScript.js"></script>
 	<script type="text/javascript" src="./js/LoadFileScript.js"></script>
+	<script type="text/javascript" src="./js/SaveFileScript.js"></script>
+	<script type="text/javascript" src="./js/InitialScript.js"></script>
 </body>
 
 </html>
