Fix filename input submit

--- a/Protótipo Atlas/sourceAtlasPrototype/index.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/index.html
@@ -18,7 +18,7 @@
 
 	<!--File Title-->
 	<form>
-		<input id="modelName" class="fileNameTextField" type="text" name="fileName" placeholder="Model name" value=''>
+		<input id="modelName" class="modelName" type="text" placeholder="Model name">
 	</form>
 
 	<!--Top Bar-->
@@ -117,6 +117,7 @@
 	<script type="text/javascript" src="./js/LoadFileScript.js"></script>
 	<script type="text/javascript" src="./js/SaveFileScript.js"></script>
 	<script type="text/javascript" src="./js/InitialScript.js"></script>
+	<script type="text/javascript" src="./js/FileNameScript.js"></script>
 </body>
 
 </html>
