Beginning the validate method. :)

--- a/Protótipo Atlas/sourceAtlasPrototype/js/test.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/js/test.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="DownloadScript.js" ></script>
 	<script type="text/javascript" src="ParserScript.js" ></script>
 	<script type="text/javascript" src="BackwardParserScript.js" ></script>
+	<script type="text/javascript" src="ValidateScript.js" ></script>
 </head>
 <body>
 
@@ -20,6 +21,11 @@ Click me to display the parsing result.</button>
 
 <p id="demo"></p>
 
+<button type="button" onclick="document.getElementById('demo3').innerHTML = validateModel(m1)">
+Click me to validate the model.</button>
+
+<p id="demo3"></p>
+
 <button type="button" onclick="document.getElementById('demo2').innerHTML = backParser()">
 Click me to display the backward parsing result.</button>
 
@@ -29,7 +35,7 @@ Click me to display the backward parsing result.</button>
 
 <script>
 
-
+/*
 var f1 = new Feature("a", "mandatory");
 var f2 = new Feature("b", "mandatory");	
 var f3 = new Feature("c", "optional");
@@ -61,8 +67,8 @@ m1.addAssociation(a4);
 m1.addAssociation(a5);
 m1.addAssociation(a6);
 m1.addAssociation(a7);
+*/
 
-/*
 var f1 = new Feature("a", "mandatory");
 var f2 = new Feature("b", "mandatory");	
 var f3 = new Feature("c", "optional");
@@ -98,7 +104,7 @@ m1.addAssociation(a5);
 m1.addAssociation(a6);
 m1.addAssociation(a7);
 m1.addAssociation(a8);
-*/
+
 
 function parser(){
 
