--- a/Protótipo Atlas/sourceAtlasPrototype/index.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/index.html
@@ -1,4 +1,3 @@
- {
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -17,9 +16,9 @@
 <body onload="firstLoad()">
 
 	<!--File Title-->
-	<form>
-		<input id="modelName" class="modelName" type="text" placeholder="Model name">
-	</form>
+
+	<input id="modelName" class="modelName" type="text" placeholder="Model name">
+
 
 	<!--Top Bar-->
 	<div class="topBar">
@@ -30,10 +29,25 @@
 
 	<!--Side Bar-->
 	<div class="sideBar">
-		<a onclick="createFeatureModalButtonClick();" href="javascript:void(0);"><span class="tooltip">Create Feature</span><i class="material-icons">crop_16_9</i></a>
-		<a onclick="" href="javascript:void(0);"><span class="tooltip">Remove Feature</span><i class="fa fa-window-close"></i></a>
-		<a onclick="" href="javascript:void(0);" class="association"><span class="tooltip">Create Association</span><i class="fa fa-share-alt" title="Create new Association"></i></a>
-		<a onclick="" href="javascript:void(0);" class="association"><span class="tooltip">Remove Association</span><i class="fa fa-share-alt-square" title="Remove feature"></i></a>
+
+		<a class="fa-stack fa-lg" onclick="createFeatureModalButtonClick();" href="javascript:void(0);">
+			<span class="tooltip">Create Feature</span>
+			<i class="fa fa-square-o fa-stack-2x"></i>			
+		</span>
+		<a class="fa-stack fa-lg" onclick="" href="javascript:void(0);">
+			<span class="tooltip">Remove Feature</span>
+			<i class="fa fa-square-o fa-stack-2x"></i>
+			<i class="fa fa-times fa-stack-1x"></i>
+		</a>
+		<a class="fa-stack fa-lg" onclick="" href="javascript:void(0);">
+			<span class="tooltip">Create Association</span>
+			<i class="fa fa-arrows-h fa-stack-2x" ></i>				
+		</a>
+		<a class="fa-stack fa-lg" onclick="" href="javascript:void(0);">
+			<span class="tooltip">Remove Association</span>
+			<i class="fa fa-arrows-h fa-stack-2x " ></i>
+			<i class="fa fa-times fa-stack-1x text-danger"></i>
+		</a>
 	</div>
 
 
@@ -44,12 +58,12 @@
 	</div>
 
 	<!--Create Feature Modal-->
-	<div id="featureModal" class="featureModal">		
-			<label><b>Feature Name</b></label>
-			<input id="nameFeatureTextField" type="text">
-			<label><b>Feature type</b></label>
-			<select id="featureTypeComboBox"></select>
-			<button id="createFeatureSubmitButton" type="submit">Create</button>		
+	<div id="featureModal" class="featureModal">
+		<label><b>Feature Name</b></label>
+		<input id="nameFeatureTextField" type="text">
+		<label><b>Feature type</b></label>
+		<select id="featureTypeComboBox"></select>
+		<button id="createFeatureSubmitButton" type="submit">Create</button>
 	</div>
 
 	<!--Load File Modal-->
@@ -59,9 +73,9 @@
 		<button id="loadFileSubmitButton" type="submit">Import</button>
 	</div>
 
-	<div class="canvas" id="canvas" style="margin-left: 200px; margin-top: 120px;">
+	<div class="canvas" id="canvas" style="margin-left: 5%; margin-top: 5%;">
 
-		
+
 		<p id="demo"></p>
 		<div id="myDiagramDiv" style="border: solid 1px black; width:100%; height:600px;"></div>
 
@@ -78,8 +92,7 @@
 		</div>
 	</div>
 	<script type="text/javascript">
-	
-	 var m1;
+		var m1;
 		function firstLoad() {
 			m1 = new Model();
 			init(m1);
@@ -96,8 +109,6 @@
 			else
 				e.style.display = 'block';
 		}
-
-		
 	</script>
 
 	<!--Load Scripts-->
