ContextMenu with undo,redo,change feature type, create child, and remove feature.
still need the "rename" option

--- a/Protótipo Atlas/sourceAtlasPrototype/index.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/index.html
@@ -52,11 +52,12 @@
 
 
 
-	<!--Right Click Menu-->
+	<!--Right Click Menu
 	<div class="rightClickMenuCanvas" id="rightClickMenuCanvas">
 		<li><a onclick="" href="javascript:void(0);">Create Feature</a></li>
 	</div>
-
+	-->
+	
 	<!--Create Feature Modal-->
 	<div id="featureModal" class="featureModal">
 		<label><b>Feature Name</b></label>
@@ -84,7 +85,7 @@
 		<button onclick="toggle_visibility('JsonText');">Show/Hide JSON</button>
 		<div style="display:none;" id="JsonText" class="jsonText">
 			<div>
-				<button id="SaveButton" onclick="save()">Save</button>
+				<button id="SaveButton" onclick="save2()">Save</button>
 				<button onclick="load()">Load</button> Diagram.model saved in JSON format:<br />
 			</div>
 			<textarea id="mySavedModel" style="width:100%;height:400px;"></textarea>
