--- a/Protótipo Atlas/sourceAtlasPrototype/js/test.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/js/test.html
@@ -77,6 +77,9 @@ var f5 = new Feature("e", "optional");
 var f6 = new Feature("f", "alternative");
 var f7 = new Feature("g", "alternative");
 var f8 = new Feature("g5", "mandatory");
+var f10 = new Feature("z1", "mandatory");
+var f11= new Feature("z2", "mandatory");
+
 var f9 = new Feature("g12", "alternative");
 var a1 = new Association(f1,f2);
 var a2 = new Association(f1,f3);
@@ -96,6 +99,9 @@ m1.addFeature(f6);
 m1.addFeature(f7);
 m1.addFeature(f8);
 m1.addFeature(f9);
+m1.addFeature(f10);
+m1.addFeature(f11);
+
 m1.addAssociation(a1);
 m1.addAssociation(a2);
 m1.addAssociation(a3);
