--- a/Protótipo Atlas/sourceAtlasPrototype/js/test.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/js/test.html
@@ -35,15 +35,17 @@ Click me to display the backward parsing result.</button>
 
 <script>
 
-/*
+
 var f1 = new Feature("a", "mandatory");
 var f2 = new Feature("b", "mandatory");	
-var f3 = new Feature("c", "optional");
+var f3 = new Feature("c", "alternative");
 var f4 = new Feature("d", "mandatory");
 var f5 = new Feature("e", "alternative");
 var f6 = new Feature("f", "alternative");
 var f7 = new Feature("g", "alternative");
 var f8 = new Feature("h", "alternative");
+var f9 = new Feature("i", "mandatory");
+
 var a1 = new Association(f1,f2);
 var a2 = new Association(f1,f3);
 var a3 = new Association(f2,f4);
@@ -60,6 +62,7 @@ m1.addFeature(f5);
 m1.addFeature(f6);
 m1.addFeature(f7);
 m1.addFeature(f8);
+m1.addFeature(f9);
 m1.addAssociation(a1);
 m1.addAssociation(a2);
 m1.addAssociation(a3);
@@ -67,8 +70,8 @@ m1.addAssociation(a4);
 m1.addAssociation(a5);
 m1.addAssociation(a6);
 m1.addAssociation(a7);
-*/
 
+/*
 var f1 = new Feature("a", "mandatory");
 var f2 = new Feature("b", "mandatory");	
 var f3 = new Feature("c", "optional");
@@ -110,7 +113,7 @@ m1.addAssociation(a5);
 m1.addAssociation(a6);
 m1.addAssociation(a7);
 m1.addAssociation(a8);
-
+*/
 
 function parser(){
 
