--- a/Protótipo Atlas/sourceAtlasPrototype/index.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/index.html
@@ -33,10 +33,10 @@
 			<span class="tooltip">Create Feature</span>
 			<i class="fa fa-square-o fa-stack-2x"></i>			
 		</span>
-		<a class="fa-stack fa-lg" onclick="" href="javascript:void(0);">
+		<a id="removeFeatureTimes" class="fa-stack fa-lg" onclick="" href="javascript:void(0);">
 			<span class="tooltip">Remove Feature</span>
 			<i class="fa fa-square-o fa-stack-2x"></i>
-			<i class="fa fa-times fa-stack-1x"></i>
+			<i  class="fa fa-times fa-stack-1x"></i>
 		</a>
 		<a class="fa-stack fa-lg" onclick="createAssociationModalButtonClick();" href="javascript:void(0);">
 			<span class="tooltip">Create Association</span>
@@ -97,11 +97,11 @@
 
 
 
-		<button onclick="toggle_visibility('JsonText');">Show/Hide JSON</button>
+		<button id="showJSON" onclick="toggle_visibility('JsonText');">Show/Hide JSON</button>
 		<div style="display:none;" id="JsonText" class="jsonText">
 			<div>
 				<button id="SaveButton" onclick="save2()">Save</button>
-				<button onclick="load()">Load</button> Diagram.model saved in JSON format:<br />
+				<button id="loadButton" onclick="load()">Load</button> Diagram.model saved in JSON format:<br />
 			</div>
 			<textarea id="mySavedModel" style="width:100%;height:400px;"></textarea>
 			<textarea id="myModel" style="width:100%;height:400px;"></textarea>
