--- a/Protótipo Atlas/sourceAtlasPrototype/index.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
 
-<body onload="firstLoad()">
+<body id="body" onload="firstLoad()">
 
 	<!--File Title-->
 
@@ -74,9 +74,9 @@
 		<a class="closeButton" onclick="closeAssociationModalButtonClick();" href="javascript:void(0);">
 			<i class="fa fa-times"></i>
 		</a>
-		<label><b>Feature 1</b></label>
+		<label><b>Parent Feature</b></label>
 		<select id="feature1ComboBox"></select>
-		<label><b>Feature 2</b></label>
+		<label><b>Child Feature</b></label>
 		<select id="feature2ComboBox"></select>
 		<button id="createAssociationSubmitButton" type="submit">Create</button>
 	</div>
@@ -93,14 +93,12 @@
 	</div>
 
 
-	<div class="canvas" id="canvas" style="margin-left: 5%; margin-top: 5%;">
+	<div class="canvas" id="canvas" style="margin-left: 6%; margin-top: 6%;">
 
 
 		<p id="demo"></p>
 		<div id="myDiagramDiv" style="border: solid 1px black; width:100%; height:600px;"></div>
-
-
-
+		
 		<button id="showJSON" onclick="toggle_visibility('JsonText');">Show/Hide JSON</button>
 		<div style="display:none;" id="JsonText" class="jsonText">
 			<div>
