--- a/Protótipo Atlas/sourceAtlasPrototype/js/test.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/js/test.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script type="text/javascript" src="TreeScript.js" ></script>
+
 	<script type="text/javascript" src="SaveScript.js" ></script>
 	<script type="text/javascript" src="ModelScript.js" ></script>
 	<script type="text/javascript" src="FeatureScript.js" ></script>
