--- a/Protótipo Atlas/sourceAtlasPrototype/index.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/index.html
@@ -2,160 +2,158 @@
 <html lang="pt-br">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>AtlasPrototype</title>
-	<link rel="stylesheet" href="./fonts/css/font-awesome.min.css" />
-	<link rel="stylesheet" href="./css/main.css" />
-	<link rel="stylesheet" href="./css/modal.css" />
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>AtlasPrototype</title>
+    <link rel="stylesheet" href="./fonts/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/modal.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
 
-<body id="body" onload="firstLoad()">
+<body onload="firstLoad()">
 
-	<!--File Title-->
+    <!--Top Bar-->
+    <div class="topBar">
+        <input id="modelName" class="modelName" type="text" placeholder="Model name">
+        <div class="topBarIconGroup">
+            <a onclick="createLoadModalButtonClick()" href="javascript:void(0);">
+                <span class="tooltip">Load Model</span>
+                <i class="fa fa-upload"></i> </a>
+            <a onclick="saveAsJson()" href="javascript:void(0);">
+                <span class="tooltip">Save as .json</span>
+                <i class="fa fa-save"></i> </a>
+            <a onclick="exportPng()" href="javascript:void(0)">
+                <span class="tooltip">Save as .png</span>
+                <i class="fa fa-file-image-o"></i> </a>
+        </div>
+    </div>
 
-	<input id="modelName" class="modelName" type="text" placeholder="Model name">
+    <!--Side Bar-->
+    <div class="sideBar">
+        <div class="sideBarIconGroup">
+            <a onclick="createFeatureModalButtonClick();" href="javascript:void(0);">
+                <span class="tooltip">Create Feature</span>
+                <i class="fa fa-square-o"></i></a>
+            <a onclick="createAssociationModalButtonClick();" href="javascript:void(0);">
+                <span class="tooltip">Create Association</span>
+                <i class="fa fa-arrows-h"></i></a>
+            <a onclick="validate()" href="javascript:void(0);">
+                <span class="tooltip">Check Model</span>
+                <i class="fa fa-check"></i></a>
+        </div>
+    </div>
 
+    <!--Create Feature Modal-->
+    <div class="modal" id="featureModal">
+        <div id="featureModalContent" class="featureModalContent">
+            <div class="closeButton">
+                <a onclick="closeFeatureModalButtonClick();" href="javascript:void(0);"><i class="fa fa-times"></i></a>
+            </div>
+            <label><b>Feature Name</b></label>
+            <input id="nameFeatureTextField" type="text">
+            <label><b>Feature type</b></label>
+            <select id="featureTypeComboBox"></select>
+            <button id="createFeatureSubmitButton" type="submit">Create</button>
+        </div>
+    </div>
 
-	<!--Top Bar-->
-	<div class="topBar">
-		<a onclick="createLoadModalButtonClick()" href="javascript:void(0);"><span class="tooltip">Load Model</span><i class="fa fa-upload"></i></a>
-		<a onclick="saveAsJson()" href="javascript:void(0);"><span class="tooltip">Save as .json</span><i class="fa fa-save"></i></a>
-		<a onclick="exportPng()" href="javascript:void(0)"><span class="tooltip">Save as .png</span><i class="fa fa-file-image-o"></i></a>
-	</div>
+    <!--Create Association Modal-->
+    <div class="modal" id="associationModal">
+        <div id="associationModalContent" class="associationModalContent">
+            <div class="closeButton">
+                <a onclick="closeAssociationModalButtonClick();" href="javascript:void(0);"><i class="fa fa-times"></i></a>
+            </div>
+            <label><b>Parent Feature</b></label>
+            <select id="feature1ComboBox"></select>
+            <label><b>Child Feature</b></label>
+            <select id="feature2ComboBox"></select>
+            <button id="createAssociationSubmitButton" type="submit">Create</button>
+        </div>
+    </div>
 
-	<!--Side Bar-->
-	<div class="sideBar">
+    <!--Load File Modal-->
+    <div class="modal" id="loadFileModal">
+        <div id="loadFileModalContent" class="loadFileModalContent">
+            <div class="closeButton">
+                <a onclick="closeFileModalButtonClick();" href="javascript:void(0);"><i class="fa fa-times"></i></a><br/>
+            </div>
+            <label><b>Select File</b></label><br/>
+            <input id="fileInput" type="file" accept=".json" value="select"><br/>
+            <button id="loadFileSubmitButton" type="submit">Import</button>
+        </div>
+    </div>
 
-		<a class="fa-stack fa-lg" onclick="createFeatureModalButtonClick();" href="javascript:void(0);">
-			<span class="tooltip">Create Feature</span>
-			<i class="fa fa-square-o fa-stack-2x"></i>			
-		</span>
-		<a id="removeFeatureTimes" class="fa-stack fa-lg" onclick="" href="javascript:void(0);">
-			<span class="tooltip">Remove Feature</span>
-			<i class="fa fa-square-o fa-stack-2x"></i>
-			<i  class="fa fa-times fa-stack-1x"></i>
-		</a>
-		<a class="fa-stack fa-lg" onclick="createAssociationModalButtonClick();" href="javascript:void(0);">
-			<span class="tooltip">Create Association</span>
-			<i class="fa fa-arrows-h fa-stack-2x" ></i>				
-		</a>
-		<a class="fa-stack fa-lg" onclick="" href="javascript:void(0);">
-			<span class="tooltip">Remove Association</span>
-			<i class="fa fa-arrows-h fa-stack-2x " ></i>
-			<i class="fa fa-times fa-stack-1x text-danger"></i>
-		</a>
-		<a class="fa-stack fa-lg" onclick="validate()" href="javascript:void(0);">
-			<span class="tooltip">Validate Model</span>
-			<i class="fa fa-check " ></i>
-		</a>
-	</div>
+    <!--Canvas-->
+    <div class="canvas" id="canvas">
+        <div id="myDiagramDiv"></div>
+        <button id="showJSON" onclick="toggle_visibility('JsonText');">Show/Hide JSON</button>
+        <div style="display:none;" id="JsonText" class="jsonText">
+            <div>
+                <button id="SaveButton" onclick="save2()">Save</button>
+                <button id="loadButton" onclick="load()">Load</button> Diagram.model saved in JSON format:<br />
+            </div>
+            <textarea id="mySavedModel"></textarea>
+            <textarea id="myModel"></textarea>
+        </div>
+    </div>
 
+    <!--Initial load-->
+    <script type="text/javascript">        
+        var m1;
 
-	<!--Create Feature Modal-->
+        
 
-	<div id="featureModal" class="featureModal">
-		<a class="closeButton" onclick="closeFeatureModalButtonClick();" href="javascript:void(0);">
-			<i class="fa fa-times"></i>
-		</a>
-		<label><b>Feature Name</b></label>
-		<input id="nameFeatureTextField" type="text">
-		<label><b>Feature type</b></label>
-		<select id="featureTypeComboBox"></select>
-		<button id="createFeatureSubmitButton" type="submit">Create</button>
-	</div>
+        function firstLoad() {
+            adjustCanvas();
+            m1 = new Model();
+            init(m1);
 
+            initGo();
+            m1 = parseToModel(document.getElementById("mySavedModel").value);
+            document.getElementById('myModel').value = JSON.stringify(m1);
 
-	<!--Create Association Modal-->
+        }
 
-	<div id="associationModal" class="associationModal">
-		<a class="closeButton" onclick="closeAssociationModalButtonClick();" href="javascript:void(0);">
-			<i class="fa fa-times"></i>
-		</a>
-		<label><b>Parent Feature</b></label>
-		<select id="feature1ComboBox"></select>
-		<label><b>Child Feature</b></label>
-		<select id="feature2ComboBox"></select>
-		<button id="createAssociationSubmitButton" type="submit">Create</button>
-	</div>
+        function toggle_visibility(id) {
+            var e = document.getElementById(id);
+            if (e.style.display == 'block')
+                e.style.display = 'none';
+            else
+                e.style.display = 'block';
+        }
 
-	<!--Load File Modal-->
+        function validate() {
+            save2();
+            var str = validateModel(m1);
+            alert(str);
+        }
+    </script>
 
-	<div id="loadFileModal" class="loadFileModal">
-		<a class="closeButton" onclick="closeFileModalButtonClick();" href="javascript:void(0);">
-			<i class="fa fa-times"></i>
-		</a>
-		<label><b>Select File</b></label>
-		<input id="fileInput" type="file" accept=".json">
-		<button id="loadFileSubmitButton" type="submit">Import</button>
-	</div>
+    <!--Load Scripts-->
+    <script type="text/javascript" src="./js/SaveScript.js"></script>
+    <script type="text/javascript" src="./js/ModelScript.js"></script>
+    <script type="text/javascript" src="./js/FeatureScript.js"></script>
+    <script type="text/javascript" src="./js/AssociationScript.js"></script>
+    <script type="text/javascript" src="./js/DownloadScript.js"></script>
+    <script type="text/javascript" src="./js/ParserScript.js"></script>
+    <script type="text/javascript" src="./js/BackwardParserScript.js"></script>
+    <script type="text/javascript" src="./js/Go.js"></script>
+    <script type="text/javascript" src="./js/GoFunction.js"></script>
+    <script type="text/javascript" src="./jQuery/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="./js/CreateModals.js"></script>
+    <script type="text/javascript" src="./js/CreateFeatureScript.js"></script>
+    <script type="text/javascript" src="./js/LoadFileScript.js"></script>
+    <script type="text/javascript" src="./js/SaveFileScript.js"></script>
+    <script type="text/javascript" src="./js/InitialScript.js"></script>
+    <script type="text/javascript" src="./js/FileNameScript.js"></script>
+    <script type="text/javascript" src="./js/CreateAssociationScript.js"></script>
+    <script type="text/javascript" src="./js/CloseModalsScript.js"></script>
+    <script type="text/javascript" src="./js/CreateAssociationSelectListener.js"></script>
+    <script type="text/javascript" src="./js/ValidateScript.js"></script>
+    <script type="text/javascript" src="./js/AdjustCanvas.js"></script>
 
-
-	<div class="canvas" id="canvas" style="margin-left: 6%; margin-top: 6%;">
-
-
-		<p id="demo"></p>
-		<div id="myDiagramDiv" style="border: solid 1px black; width:100%; height:600px;"></div>
-		
-		<button id="showJSON" onclick="toggle_visibility('JsonText');">Show/Hide JSON</button>
-		<div style="display:none;" id="JsonText" class="jsonText">
-			<div>
-				<button id="SaveButton" onclick="save2()">Save</button>
-				<button id="loadButton" onclick="load()">Load</button> Diagram.model saved in JSON format:<br />
-			</div>
-			<textarea id="mySavedModel" style="width:100%;height:400px;"></textarea>
-			<textarea id="myModel" style="width:100%;height:400px;"></textarea>
-		</div>
-	</div>
-	<script type="text/javascript">
-		var m1;
-		function firstLoad() {
-			m1 = new Model();
-			init(m1);
-
-			initGo();
-			m1 = parseToModel(document.getElementById("mySavedModel").value);
-			document.getElementById('myModel').value = JSON.stringify(m1);
-
-		}
-		function toggle_visibility(id) {
-			var e = document.getElementById(id);
-			if (e.style.display == 'block')
-				e.style.display = 'none';
-			else
-				e.style.display = 'block';
-		}
-		function validate(){
-		save2();
-		var str = validateModel(m1);
-		alert(str);
-		}
-	</script>
-
-	<!--Load Scripts-->
-	<script type="text/javascript" src="./js/CancelMenu.js"></script>
-	<script type="text/javascript" src="./js/SaveScript.js"></script>
-	<script type="text/javascript" src="./js/ModelScript.js"></script>
-	<script type="text/javascript" src="./js/FeatureScript.js"></script>
-	<script type="text/javascript" src="./js/AssociationScript.js"></script>
-	<script type="text/javascript" src="./js/DownloadScript.js"></script>
-	<script type="text/javascript" src="./js/ParserScript.js"></script>
-	<script type="text/javascript" src="./js/BackwardParserScript.js"></script>
-	<script type="text/javascript" src="./js/Go.js"></script>
-	<script type="text/javascript" src="./js/GoFunction.js"></script>
-	<script type="text/javascript" src="./jQuery/jquery-3.2.1.js"></script>
-	<script type="text/javascript" src="./js/CreateModals.js"></script>
-	<script type="text/javascript" src="./js/CreateFeatureScript.js"></script>
-	<script type="text/javascript" src="./js/LoadFileScript.js"></script>
-	<script type="text/javascript" src="./js/SaveFileScript.js"></script>
-	<script type="text/javascript" src="./js/InitialScript.js"></script>
-	<script type="text/javascript" src="./js/FileNameScript.js"></script>
-	<script type="text/javascript" src="./js/CreateAssociationScript.js"></script>
-	<script type="text/javascript" src="./js/CloseModalsScript.js"></script>
-	<script type="text/javascript" src="./js/CreateAssociationSelectListener.js"></script>
-	<script type="text/javascript" src="./js/ValidateScript.js"></script>
 
 </body>
 
